# Spain-Market-Platform

./: .env.example  .gitignore  LICENSE  Makefile  README.md  config.yaml  daily_grade.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily_forecast.yml
data/processed/: model_frame.parquet  prices_daily.csv  prices_daily.parquet  system_daily.csv  system_daily.parquet  weather_daily.csv  weather_daily.parquet
docs/: data_dictionary.md  model_card.md
logs/: forecast_log.csv
models/: model_metadata.json
notebooks/: 01_quick_start.ipynb
reports/: latest_forecast.md  model_performance.md  risk_report.md
scripts/: repair_and_prepare.py
src/spain_power/: __init__.py  __main__.py  cli.py  config.py  features.py  forecasting.py  grading.py  io_utils.py  modeling.py  pipeline.py  reporting.py  risk.py
src/spain_power/data/: omie.py  redata.py  weather.py
src/spain_power_market_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_features.py  test_omie.py  test_realtime_features.py  test_redata.py  test_risk.py
tests/fixtures/: omie_sample.1  redata_sample.json
